# GUT_Monte_Carlo_Tree_Search

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example_input.txt
docs/: LinkToGoodTutorial.url
scripts/: build_and_copy.sh  build_and_run.sh  clean_up.sh  run_mcts.sh
source/: MctsCommon.h  MctsMain.cpp  main.cpp
source/games/: ChessGameState.cpp  ChessGameState.h  IGameState.h
source/parsers/: ChessGameParser.cpp  ChessGameParser.h
source/playouts/: WithUctSort.cpp  WithUctSort.h  WithUctSortLeafParallelization.cpp  WithUctSortLeafParallelization.h  WithUctSortRootParallelization.cpp  WithUctSortRootParallelization.h  WithUtcSort.cpp  WithUtcSort.h
source/tree/: Node.cpp  Node.h
source/utils/: ChessGameRepresentations.cpp  ChessGameRepresentations.h  OmpHelpers.cpp  OmpHelpers.h
